--- a/FASystem/MainWindow.xaml
+++ b/FASystem/MainWindow.xaml
@@ -5,8 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FASystem"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="700" Width="400">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="90*"/>
+            <RowDefinition Height="583*"/>
+        </Grid.RowDefinitions>
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="31,45,0,0" TextWrapping="Wrap" Text="トレーニング" VerticalAlignment="Top"/>
+        <Button x:Name="button" Content="設定" Margin="310,45,10,25"/>
+
     </Grid>
 </Window>
