--- a/FASystem/MainWindow.xaml
+++ b/FASystem/MainWindow.xaml
@@ -20,6 +20,8 @@
         <Canvas Grid.ColumnSpan="2" Background="#FF96D788" Margin="0,0,0,1"/>
         <Border BorderThickness="1" Background="#FFAEADAD" BorderBrush="#FFA5A5A5" Grid.ColumnSpan="2" Height="1" VerticalAlignment="Bottom"/>
         <TextBlock x:Name="textBlock" TextWrapping="Wrap" Text="MessageQueue" Margin="0,10" Grid.ColumnSpan="2" TextAlignment="Center" FontSize="32" VerticalAlignment="Center" Foreground="#FF2E2E2E"/>
+        <Canvas Margin="0" Grid.Row="2" Grid.ColumnSpan="2" OpacityMask="#FFA58F8F" Background="#FF6F6F6F"/>
+        <Canvas Grid.Column="1" Grid.Row="1" OpacityMask="Black" Background="#FFF0BEBE"/>
 
     </Grid>
 </Window>
