--- a/FASystem/View/MainWindow.xaml
+++ b/FASystem/View/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FASystem"
+        xmlns:sparrow="http://sparrowtoolkit.codeplex.com/wpf"
         mc:Ignorable="d"
         Title="MainWindow" Height="700" Width="400">
     <Grid>
@@ -20,7 +21,17 @@
         <Canvas Grid.ColumnSpan="2" Background="#FF96D788" Margin="0,0,0,1"/>
         <Border BorderThickness="1" Background="#FFAEADAD" BorderBrush="#FFA5A5A5" Grid.ColumnSpan="2" Height="1" VerticalAlignment="Bottom"/>
         <TextBlock x:Name="textBlock" TextWrapping="Wrap" Text="MessageQueue" Margin="0,10" Grid.ColumnSpan="2" TextAlignment="Center" FontSize="32" VerticalAlignment="Center" Foreground="#FF2E2E2E"/>
-        <Canvas Margin="0" Grid.Row="2" Grid.ColumnSpan="2" OpacityMask="#FFA58F8F" Background="#FF6F6F6F"/>
+        <StackPanel Orientation="Horizontal" Grid.ColumnSpan="2" Margin="0,1,0,0.5" Background="#FFBCB1B1" Grid.Row="2">
+            <sparrow:SparrowChart x:Name="chartX" Margin="0,0,230,0" Grid.Row="1" Width="200" >
+                <sparrow:SparrowChart.XAxis>
+                    <sparrow:LinearXAxis MaxValue="400" MinValue="1" ShowCrossLines="True"/>
+                </sparrow:SparrowChart.XAxis>
+                <sparrow:SparrowChart.YAxis>
+                    <sparrow:LinearYAxis MaxValue="1" MinValue="-1" Header="X(m)" />
+                </sparrow:SparrowChart.YAxis>
+                <sparrow:LineSeries XPath="Frame" YPath="Coordinate" Stroke="#FF2B33EC" StrokeThickness="2" />
+            </sparrow:SparrowChart>
+        </StackPanel>
         <Canvas Grid.Column="1" Grid.Row="1" OpacityMask="Black" Background="#FFF0BEBE"/>
 
     </Grid>
