--- a/FASystem/View/MainWindow.xaml
+++ b/FASystem/View/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:FASystem"
         xmlns:sparrow="http://sparrowtoolkit.codeplex.com/wpf"
         mc:Ignorable="d"
-        Title="MainWindow" Height="700" Width="400">
+        Title="MainWindow" Height="700" Width="400" ContentRendered="Window_ContentRendered">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="58*"/>
