--- a/FASystem/View/MainWindow.xaml
+++ b/FASystem/View/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:sparrow="http://sparrowtoolkit.codeplex.com/wpf"
         xmlns:d3="http://research.microsoft.com/DynamicDataDisplay/1.0"
         mc:Ignorable="d"
-        Title="MainWindow" Height="900" Width="600" ContentRendered="Window_ContentRendered">
+        Title="フォーム分析" Height="900" Width="600" ContentRendered="Window_ContentRendered" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="5*"/>
@@ -19,10 +19,7 @@
             <RowDefinition Height="150*"/>
         </Grid.RowDefinitions>
         <Canvas x:Name="cameraCanvas" Margin="0,0.286,1.286,1.571" Grid.Row="1" Grid.ColumnSpan="2"/>
-        <Canvas Background="#FF96D788" Margin="0,0,1.286,0.714" Grid.ColumnSpan="2">
-            <Button x:Name="button1" Content="設定" Canvas.Left="500" Canvas.Top="70" Width="83" Height="41"/>
-        </Canvas>
-        <Border BorderThickness="1" Background="#FFAEADAD" BorderBrush="#FFA5A5A5" Height="1" VerticalAlignment="Bottom" Margin="0,0,1.286,566.571" Grid.RowSpan="2" Grid.ColumnSpan="2"/>
+        <Canvas Background="#FF96D788" Margin="0,0,1.286,0.714" Grid.ColumnSpan="2"/>
         <TextBlock x:Name="textBlock" TextWrapping="Wrap" Margin="0,40,0.429,39.714" TextAlignment="Center" FontSize="32" Foreground="#FF2E2E2E" Text="Message Queue" VerticalAlignment="Center" Height="42"/>
         <StackPanel Orientation="Horizontal" Margin="0,1.429,1.286,0.429" Background="#FFD2C2C2" Grid.Row="2" Grid.ColumnSpan="2">
             <d3:ChartPlotter Name="plotter" Margin="10,10,20,10.143" Width="330">
@@ -34,7 +31,8 @@
             </d3:ChartPlotter>
         </StackPanel>
         <Canvas Grid.Row="1" OpacityMask="Black" Background="#FFF0BEBE" Visibility="Hidden" Margin="14,0.286,11.429,182.429" Grid.RowSpan="2"/>
-        <Button x:Name="trainingSelectButton" Content="トレーニング選択" Margin="4.571,17,6.286,61.714" Grid.Column="1" Click="trainingSelectButton_Click"/>
+        <Button x:Name="trainingSelectButton" Content="トレーニング選択" Margin="5,10,5,60" Grid.Column="1" Click="trainingSelectButton_Click"/>
+        <Button x:Name="settingButton" Content="設定" Grid.Column="1" Margin="5,65,5,10" Click="settingButton_Click"/>
 
     </Grid>
 </Window>
