--- a/FASystem/View/TrainingListWindow.xaml
+++ b/FASystem/View/TrainingListWindow.xaml
@@ -7,11 +7,15 @@
                 xmlns:k="http://schemas.microsoft.com/kinect/2014"
 
         mc:Ignorable="d"
-        Title="SettingWindow" Height="300" Width="300">
+        Title="トレーニング選択" Height="600" Width="400" Background="#FFE8E8E8" BorderBrush="#FFB65858" ResizeMode="NoResize" ShowInTaskbar="False" WindowStartupLocation="CenterScreen" Topmost="True">
     <Grid>
-        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="トレーニングを選択してください" VerticalAlignment="Top"/>
-        <k:KinectRegion Name="kinectRegion" Width="250" Height="200">
-        <ListBox x:Name="trainingList" Margin="10,40,10,10.5" DisplayMemberPath="TrainingName" SelectionChanged="trainingList_SelectionChanged" FontSize="21.333"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="60*"/>
+            <RowDefinition Height="511*"/>
+        </Grid.RowDefinitions>
+        <TextBlock x:Name="textBlock" Margin="10,10,10.286,11" TextWrapping="Wrap" Text="トレーニングを選択してください" FontSize="29.333"/>
+        <k:KinectRegion Name="kinectRegion" Margin="0,0,0.286,0.429" Grid.Row="1">
+            <ListBox x:Name="trainingList" Margin="10,10,10,10" DisplayMemberPath="TrainingName" SelectionChanged="trainingList_SelectionChanged" FontSize="32"/>
         </k:KinectRegion>
 
     </Grid>
