--- a/FASystem/View/MainWindow.xaml
+++ b/FASystem/View/MainWindow.xaml
@@ -7,32 +7,32 @@
         xmlns:sparrow="http://sparrowtoolkit.codeplex.com/wpf"
         xmlns:d3="http://research.microsoft.com/DynamicDataDisplay/1.0"
         mc:Ignorable="d"
-        Title="FASystem" Height="900" Width="600" ContentRendered="Window_ContentRendered" WindowStartupLocation="CenterScreen">
+        Title="FASystem" Height="900" Width="600" ContentRendered="Window_ContentRendered" WindowStartupLocation="CenterScreen" MinWidth="500" MinHeight="800">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="5*"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="100*"/>
+            <RowDefinition Height="60*"/>
             <RowDefinition Height="465*"/>
-            <RowDefinition Height="150*"/>
+            <RowDefinition Height="160*"/>
         </Grid.RowDefinitions>
         <Grid Margin="0,0,0,0" Grid.Row="2" Grid.ColumnSpan="2" Background="#FF524E4E"/>
 
-        <Canvas x:Name="cameraCanvas" Margin="0,0,0.286,182.429" Grid.ColumnSpan="2" Grid.RowSpan="3"/>
-        <Canvas Background="#B296D788" Margin="0,0,0,0" Grid.ColumnSpan="2"/>
-        <TextBlock x:Name="textBlock" TextWrapping="Wrap" Margin="0,40,0.429,39.714" TextAlignment="Center" FontSize="32" Foreground="#FF2E2E2E" Text="Message Queue" VerticalAlignment="Center" Height="42"/>
+        <Canvas x:Name="cameraCanvas" Margin="0,0,0.286,0" Grid.ColumnSpan="2" Grid.RowSpan="2"/>
+        <Canvas Background="#E596D788" Margin="0,0,0,0" Grid.ColumnSpan="2"/>
+        <TextBlock x:Name="textBlock" TextWrapping="Wrap" Margin="0" TextAlignment="Center" FontSize="32" Foreground="#FF2E2E2E" Text="Message Queue" VerticalAlignment="Center"/>
         <Canvas Grid.Row="1" OpacityMask="Black" Background="#FFF0BEBE" Visibility="Hidden" Margin="14,0.286,11.429,182.429" Grid.RowSpan="2"/>
-        <Button x:Name="trainingSelectButton" Content="トレーニング選択" Margin="4.571,10.429,5.286,120.429" Click="trainingSelectButton_Click" Grid.Row="2" Grid.Column="1"/>
-        <Button x:Name="settingButton" Content="設定" Grid.Column="1" Margin="4.571,79.429,5.286,56.429" Click="settingButton_Click" Grid.Row="2"/>
-        <d3:ChartPlotter x:Name="plotter" Margin="0,0,0,0" Grid.Row="2" Background="#FF4A4A4A">
+        <Button x:Name="trainingSelectButton" Content="トレーニング選択" Margin="5,10,5,100" Click="trainingSelectButton_Click" Grid.Row="2" Grid.Column="1" FontWeight="Bold"/>
+        <Button x:Name="settingButton" Content="設定" Grid.Column="1" Margin="5,110,5,10" Click="settingButton_Click" Grid.Row="2" FontWeight="Bold"/>
+        <d3:ChartPlotter x:Name="plotter" Margin="0,10,15,5" Grid.Row="2" Background="#FF524E4E" BorderBrush="#FFB0A4A4" Foreground="#FFB0A4A4">
             <d3:Header FontFamily="Arial"/>
             <d3:VerticalAxisTitle FontFamily="Arial" Content="angle"/>
             <d3:HorizontalAxisTitle FontFamily="Arial" Content="frame"/>
         </d3:ChartPlotter>
-        <TextBlock x:Name="textBlock1" TextWrapping="Wrap" Grid.Column="1" Margin="0,0,54.286,35.714" FontSize="32" FontWeight="Bold" HorizontalAlignment="Right" Width="40" Height="42" VerticalAlignment="Bottom"><Run Text="1"/><Run Text="0"/></TextBlock>
-        <TextBlock x:Name="textBlock2" TextWrapping="Wrap" Text="/reps" FontSize="26.667" Grid.Column="1" Margin="0,46,1.286,0" HorizontalAlignment="Right" Width="61" Height="36" VerticalAlignment="Top"/>
+        <TextBlock x:Name="textBlock1" TextWrapping="Wrap" Grid.Column="1" Margin="0,0,54.286,0" FontSize="32" FontWeight="Bold" Height="42" VerticalAlignment="Center" HorizontalAlignment="Right" Width="40"><Run Text="1"/><Run Text="0"/></TextBlock>
+        <TextBlock x:Name="textBlock2" TextWrapping="Wrap" Text="/reps" FontSize="24" Grid.Column="1" Margin="0,0,5.286,0" HorizontalAlignment="Right" VerticalAlignment="Center"/>
 
     </Grid>
 </Window>
