--- a/FASystem/View/MainWindow.xaml
+++ b/FASystem/View/MainWindow.xaml
@@ -21,7 +21,7 @@
         <Grid Margin="0,0,0,0" Grid.Row="2" Grid.ColumnSpan="2" Background="#FF524E4E"/>
 
         <Canvas x:Name="cameraCanvas" Margin="0,0,0.286,0" Grid.ColumnSpan="2" Grid.RowSpan="2"/>
-        <Canvas Background="#E596D788" Margin="0,0,0,0" Grid.ColumnSpan="2"/>
+        <Grid x:Name="MessageGrid" Background="#E596D788" Margin="0,0,0,0" Grid.ColumnSpan="2"/>
         <TextBlock x:Name="textBlock" TextWrapping="Wrap" Margin="0" TextAlignment="Center" FontSize="32" Foreground="#FF2E2E2E" Text="Message Queue" VerticalAlignment="Center"/>
         <Canvas Grid.Row="1" OpacityMask="Black" Background="#FFF0BEBE" Visibility="Hidden" Margin="14,0.286,11.429,182.429" Grid.RowSpan="2"/>
         <Button x:Name="trainingSelectButton" Content="トレーニング選択" Margin="5,10,5,100" Click="trainingSelectButton_Click" Grid.Row="2" Grid.Column="1" FontWeight="Bold"/>
