--- a/FASystem/View/MainWindow.xaml
+++ b/FASystem/View/MainWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:FASystem.CustomControl"
         xmlns:sparrow="http://sparrowtoolkit.codeplex.com/wpf"
         xmlns:d3="http://research.microsoft.com/DynamicDataDisplay/1.0"
+        xmlns:k="http://schemas.microsoft.com/kinect/2014"
         mc:Ignorable="d"
         Title="FASystem" Height="900" Width="600" ContentRendered="Window_ContentRendered" WindowStartupLocation="CenterScreen" MinWidth="500" MinHeight="800">
     <Grid>
@@ -20,19 +21,36 @@
         </Grid.RowDefinitions>
         <Grid Margin="0,0,0,0" Grid.Row="2" Grid.ColumnSpan="2" Background="#FF524E4E"/>
 
-        <Canvas x:Name="cameraCanvas" Margin="0,0,0.286,0" Grid.ColumnSpan="2" Grid.RowSpan="2"/>
-        <Grid x:Name="MessageGrid" Background="#E596D788" Margin="0,0,0,0" Grid.ColumnSpan="2"/>
-        <TextBlock x:Name="textBlock" TextWrapping="Wrap" Margin="0" TextAlignment="Center" FontSize="32" Foreground="#FF2E2E2E" Text="Message Queue" VerticalAlignment="Center"/>
+        <Canvas x:Name="cameraCanvas" Margin="0,0,0,0" Grid.ColumnSpan="2" Grid.RowSpan="2"/>
+        <Grid x:Name="MessageGrid" Background="#E596D788" Margin="0,-3,0.429,2.571" Grid.ColumnSpan="2"/>
+
+        <TextBlock x:Name="messageTextBlock" TextWrapping="Wrap" Margin="0" TextAlignment="Center" FontSize="32" Foreground="#FF2E2E2E" Text="トレーニングが選択されていません" VerticalAlignment="Center"/>
         <Canvas Grid.Row="1" OpacityMask="Black" Background="#FFF0BEBE" Visibility="Hidden" Margin="14,0.286,11.429,182.429" Grid.RowSpan="2"/>
-        <Button x:Name="trainingSelectButton" Content="トレーニング選択" Margin="5,10,5,100" Click="trainingSelectButton_Click" Grid.Row="2" Grid.Column="1" FontWeight="Bold"/>
-        <Button x:Name="settingButton" Content="設定" Grid.Column="1" Margin="5,110,5,10" Click="settingButton_Click" Grid.Row="2" FontWeight="Bold"/>
+
+
+
         <d3:ChartPlotter x:Name="plotter" Margin="0,10,15,5" Grid.Row="2" Background="#FF524E4E" BorderBrush="#FFB0A4A4" Foreground="#FFB0A4A4">
             <d3:Header FontFamily="Arial"/>
             <d3:VerticalAxisTitle FontFamily="Arial" Content="angle"/>
             <d3:HorizontalAxisTitle FontFamily="Arial" Content="frame"/>
         </d3:ChartPlotter>
-        <TextBlock x:Name="textBlock1" TextWrapping="Wrap" Grid.Column="1" Margin="0,0,54.286,0" FontSize="32" FontWeight="Bold" Height="42" VerticalAlignment="Center" HorizontalAlignment="Right" Width="40"><Run Text="1"/><Run Text="0"/></TextBlock>
-        <TextBlock x:Name="textBlock2" TextWrapping="Wrap" Text="/reps" FontSize="24" Grid.Column="1" Margin="0,0,5.286,0" HorizontalAlignment="Right" VerticalAlignment="Center"/>
 
+        <TextBlock x:Name="textBlock1" TextWrapping="Wrap" Grid.Column="1" Margin="0,0,54.286,0" FontSize="32" Height="42" VerticalAlignment="Center" HorizontalAlignment="Right" Width="40"><Run Text="1"/><Run Text="0"/></TextBlock>
+        <TextBlock x:Name="textBlock2" TextWrapping="Wrap" Text="/reps" FontSize="24" Grid.Column="1" Margin="0,0,5.286,0" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <k:KinectRegion x:Name="kinectRegion" Margin="0,0,0,0" Grid.Column="1" Grid.Row="2" >
+            <Grid Grid.Column="1" Grid.RowSpan="2" >
+                <Button x:Name="trainingSelectButton" Margin="5,77,5,75.429" Click="trainingSelectButton_Click" FontWeight="Bold">
+                    <Button.Content>
+                        <TextBlock Text="トレーニング選択" TextWrapping="WrapWithOverflow" FontSize="18.667" TextAlignment="Center" FontWeight="Normal" />
+                    </Button.Content>
+                </Button>
+                <Button x:Name="settingButton" Content="設定" Margin="5,147,4.857,10.429" Click="settingButton_Click" FontSize="18.667"/>
+                <Button x:Name="trainingStartButton" Margin="5,10,4.857,0" VerticalAlignment="Top" Height="52" FontWeight="Bold" FontSize="18.667" Background="#FF87CB79" Click="trainingStartButton_Click">
+                    <Button.Content>
+                        <TextBlock Text="トレーニング開始" TextWrapping="WrapWithOverflow" FontSize="18.667" TextAlignment="Center" FontWeight="Normal" />
+                    </Button.Content>
+                </Button>
+            </Grid>
+        </k:KinectRegion>
     </Grid>
 </Window>
