--- a/FASystem/View/TrainingListWindow.xaml
+++ b/FASystem/View/TrainingListWindow.xaml
@@ -6,7 +6,13 @@
         xmlns:local="clr-namespace:FASystem"
         xmlns:k="http://schemas.microsoft.com/kinect/2014"
         mc:Ignorable="d"
-        Title="トレーニング選択" Height="600" Width="400" Background="#FFE8E8E8" BorderBrush="#FFB65858" ResizeMode="NoResize" ShowInTaskbar="False" WindowStartupLocation="CenterScreen" Topmost="True">
+        xmlns:c="clr-namespace:FASystem.Converter"
+        Title="トレーニング選択" Height="600" Width="507.857" Background="#FFE8E8E8" BorderBrush="#FFB65858" ResizeMode="NoResize" ShowInTaskbar="False" WindowStartupLocation="CenterScreen" Topmost="True">
+
+    <Window.Resources>
+        <c:IntToStringConverter x:Key="converter" />
+    </Window.Resources>
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="60*"/>
@@ -16,6 +22,11 @@
         <k:KinectRegion Name="kinectRegion" Margin="0,0,0,0" Grid.Row="1">
             <ListBox x:Name="trainingList" Margin="10,10,10,10" DisplayMemberPath="TrainingName" SelectionChanged="trainingList_SelectionChanged" FontSize="32"/>
         </k:KinectRegion>
+        <StackPanel Margin="0,0,10.286,0" HorizontalAlignment="Right" Width="50">
+            <Button x:Name="repsUpButton" Content="＋" Height="30" FontSize="21.333" FontWeight="Bold" Click="repsUpButton_Click"/>
+            <Button x:Name="repsDownButton" Content="－" Height="30" FontSize="21.333" FontWeight="Bold" Click="repsDownButton_Click"/>
+        </StackPanel>
+        <TextBlock x:Name="repsText" Text="{Binding Reps,Converter={StaticResource converter}}" TextWrapping="Wrap" Margin="395,10,65.286,8" VerticalAlignment="Center" FontSize="26.667" Height="42"><Run Text="10"/><LineBreak/><Run/></TextBlock>
 
     </Grid>
 </Window>
